add static and update config

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -4,10 +4,10 @@ email: olea@germain.tech
 #phone:
 address: 51100 Reims, France
 year: 2024
-avatar: https://media.discordapp.net/attachments/1194296038782160936/1194296122789863465/IMG-20231001-WA0057-01.png
+avatar: images/germain.png
 avatarclass: circle
 background: ""
-banner: https://media.discordapp.net/attachments/1194296038782160936/1194296122789863465/IMG-20231001-WA0057-01.png
+banner: images/banner.png
 favicon: favicons/favicon-16x16.png
 DateForm: January 10, 2024
 #author:
